[divide the dubbo-monitor]